| Summary: | ASTERISK-28780: app_mixmonitor: Memory leak due to race condition between AMI MixMonitor and hangup | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2020-03-12 09:21:27 | Date Closed: | 2020-03-13 09:57:26 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Applications/app_mixmonitor Core/General |
| Versions: | 13.31.0 16.8.0 17.2.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | It is possible given a specific set of circumstances for an AMI initiated MixMonitor to result in a channel and MixMonitor thread to remain active past hangup. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2020-03-13 09:57:28.442-0500 Change 13941 merged by Joshua Colp: audiohook: Don't allow audiohooks to attach to hung up channels. [https://gerrit.asterisk.org/c/asterisk/+/13941|https://gerrit.asterisk.org/c/asterisk/+/13941] By: Friendly Automation (friendly-automation) 2020-03-13 09:57:52.769-0500 Change 13963 merged by Joshua Colp: audiohook: Don't allow audiohooks to attach to hung up channels. [https://gerrit.asterisk.org/c/asterisk/+/13963|https://gerrit.asterisk.org/c/asterisk/+/13963] By: Friendly Automation (friendly-automation) 2020-03-13 09:58:03.862-0500 Change 13962 merged by Joshua Colp: audiohook: Don't allow audiohooks to attach to hung up channels. [https://gerrit.asterisk.org/c/asterisk/+/13962|https://gerrit.asterisk.org/c/asterisk/+/13962] By: Friendly Automation (friendly-automation) 2020-03-13 09:58:16.453-0500 Change 13961 merged by Joshua Colp: audiohook: Don't allow audiohooks to attach to hung up channels. [https://gerrit.asterisk.org/c/asterisk/+/13961|https://gerrit.asterisk.org/c/asterisk/+/13961] | ||